--- a/zhTest.html
+++ b/zhTest.html
@@ -7,55 +7,53 @@
     <title>Document</title>
   </head>
   <body>
-    <table
-      align="center"
-      border="0"
-      cellpadding="0"
-      cellspacing="0"
-      height="300"
-      width="600"
-      background="https://images.acy.com/edm/En_footer_bg_img.jpg"
-      style="background-size: cover; font-family: 'Helvetica Neue', sans-serif"
-    >
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td>
-          <a href="https://www.acy-zh.com/zh" target="_blank"
-            ><img
-              alt="logo"
-              height="55"
-              width="166"
-              style="margin-top: 20px"
-              src="https://images.acy.com/edm/en_footer_logo.png"
-          /></a>
+    <table border="0" width="100%" cellspacing="0" cellpadding="0">
+      <tr style="line-height: 1">
+        <td
+          height="30px"
+          align="right"
+          style="
+            color: #153643;
+            font-size: 12px;
+            font-weight: bold;
+            font-family: Arial, sans-serif;
+          "
+        >
+          <table
+            style="
+              width: 600px;
+              height: 30px;
+              font-family: Arial, sans-serif;
+              font-size: 12px;
+            "
+            align="center"
+            bgcolor="#F2F2F2"
+          >
+            <tr style="height: 26px">
+              <td style="width: 50px; text-align: right; height: 26px">
+                <a
+                  style="text-decoration: none; color: #01254f ;padding-right: 10px;"
+                  href=" https://acycn.com/zh?eCampaign=emaillivechat"
+                  >在线咨询</a
+                >
+                <span style="border-left: 1px solid #01254f; padding: 0px 10px"
+                ><a
+                  style="text-decoration: none; color: #01254f"
+                  href="https://acy.cloud/?eCampaign=emaillogin"
+                  >登录</a
+                ></span
+              >
+              </td>
+            </tr>
+          </table>
         </td>
       </tr>
       <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td>
-          <a
-            href="https://www.acy-zh.com/zh/education/webinars"
-            target="_blank"
-          >
-            <img
-              src="https://images.acy.com/edm/SC_Email_button.png"
-              width="318"
-              height="120"
-            />
+        <td align="center" valign="middle">
+          <a href="https://acycn.com/zh?eCampaign=emailtopbanner">
+            <img src="https://docs.acygroup.com/edm/Chinese-bannerEDM.png" />
           </a>
         </td>
-      </tr>
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td></td>
-      </tr>
-      <tr>
-        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-        <td></td>
       </tr>
     </table>
 
@@ -116,7 +114,58 @@
         </tr>
       </tbody>
     </table>
-
+    <!--[if !mso]><!-->
+    <table
+      align="center"
+      border="0"
+      cellpadding="0"
+      cellspacing="0"
+      height="300"
+      width="600"
+      background="https://images.acy.com/edm/En_footer_bg_img.jpg"
+      style="background-size: cover; font-family: 'Helvetica Neue', sans-serif"
+    >
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>
+          <a href="https://www.acy-zh.com/zh" target="_blank"
+            ><img
+              alt="logo"
+              height="55"
+              width="166"
+              style="margin-top: 20px"
+              src="https://images.acy.com/edm/en_footer_logo.png"
+          /></a>
+        </td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td>
+          <a
+            href="https://www.acy-zh.com/zh/education/webinars"
+            target="_blank"
+          >
+            <img
+              src="https://images.acy.com/edm/SC_Email_button.png"
+              width="318"
+              height="120"
+            />
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+        <td></td>
+      </tr>
+    </table>
     <table
       align="center"
       border="0"
@@ -231,12 +280,10 @@
         padding-bottom: 10px;
         color: #000;
         font-family: Arial, Helvetica, sans-serif;
-        border-top: 0.5px solid rgba(116, 116, 116, 0.7);
-        border-bottom: 0.5px solid rgba(116, 116, 116, 0.7);
       "
     >
       <tr style="text-align: center">
-        <td style="padding: 15px 0px 10.55px 0px" width="92%">
+        <td style="padding: 10px 0" width="92%">
           <span
             style="
               font-size: 18px;
